# python-project-lvl2

./: Makefile  README.md  cli.py  pyproject.toml  setup.cfg
.github/workflows/: cc.yml  make-lint.yml
gendiff/: __init__.py  cli.py  differ.py  parser.py
gendiff/formatters/: __init__.py  edit_names.py  formats.py  json.py  plain.py  stylish.py
gendiff/main_logic/: diff.py  differ.py  opener.py  parser.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: result_json_flat  result_json_nested  result_plain_flat
